compiler/testData/cli/jvm/noStdlib.out
compiler/testData/cli/jvm/noStdlib.kt:1:8: error: unresolved reference: kotlin
import kotlin.reflect.*
       ^
compiler/testData/cli/jvm/noStdlib.kt:5:5: error: unresolved reference: listOf
    listOf(42)
    ^
COMPILATION_ERROR
